# slothunter

./: .gitignore  Cargo.toml  README.md  configuration-template.toml  run-template.sh
.github/workflows/: checks.yml  release.yml  staging.yml
example/webhook/: guide.md
src/: hunter.rs  main.rs  primitive.rs
src/hunter/: configuration.rs  graphql.rs  node.rs  notification.rs  tx.rs  util.rs
src/primitive/: event.rs  runtime.rs
src/primitive/runtime/: constant.rs  event.rs  storage.rs
test/: guide.md
test/integration/: Dockerfile  docker-compose.yml  rococo.toml
