[package]
authors     = ["Xavier Lau <xavier@inv.cafe>"]
build       = "build.rs"
description = "A bot for Polkadot parachain auction."
edition     = "2021"
homepage    = "https://hack.ink/slothunter"
license     = "GPL-3.0"
name        = "slothunter"
readme      = "README.md"
repository  = "https://github.com/hack-ink/slothunter"
version     = "0.2.0"

[profile.ci-dev]
incremental = false
inherits    = "dev"

[profile.ci-release]
inherits = "release"
lto      = true

[features]
node-test = []

[build-dependencies]
# crates.io
vergen = { version = "8.2", features = ["build", "cargo", "git", "gitcl"] }

[dependencies]
# crates.io
anyhow             = { version = "1.0" }
app_dirs2          = { version = "2.5" }
array-bytes        = { version = "6.1" }
clap               = { version = "4.4", features = ["derive"] }
color-eyre         = { version = "0.6" }
futures            = { version = "0.3" }
jsonrpsee          = { version = "0.16", features = ["async-client", "jsonrpsee-client-transport", "ws-client"] }
lettre             = { version = "0.10" }
parity-scale-codec = { version = "3.6" }
regex              = { version = "1.9" }
reqwest            = { version = "0.11", features = ["json"] }
scale-decode       = { version = "0.9" }
scale-value        = { version = "0.12" }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = { version = "1.0" }
sp-core            = { version = "22.0" }
sp-runtime         = { version = "25.0" }
subxt              = { version = "0.31", features = ["substrate-compat"] }
tokio              = { version = "1.32", features = ["macros", "rt-multi-thread"] }
toml               = { version = "0.7" }
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
